flux/manifests/04-apps/media/acquisitions/copyparty/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: copyparty
  labels:
    app.kubernetes.io/name: copyparty
